Remove fetch backoff logic that can exceed an hour.
Comments are inline; short version, cfssl transports default backoff
settings induce up to a 5 minute delay on the first failure, and
build beyond that by powers of 2 up to 5 total failures.

We already have retry logic via the manager, thus having massively
long delays like this isn't desirable and overrides the intervals
folks configured.

Instead, just use a simplistic exponential back off that starts at .5s
delay, and builds to a max of 2 minutes before giving up.

Remember, this line of code is effectively single thread; so what was
in place was seriously nonviable, and what's now being added still
sucks- this can be resolved via splitting seperate watcher threads
per spec in a follow up PR.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -49,3 +49,7 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/cenkalti/backoff"
+  version = "3.0.0"
