--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -53,3 +53,7 @@
 [[constraint]]
   name = "github.com/cenkalti/backoff"
   version = "3.0.0"
+
+[[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.4.2"
